Animate Logo but don't do it properly!

--- a/index.html
+++ b/index.html
@@ -44,6 +44,8 @@
                         <div class="logo-graph-bar" data-height="20%"></div>
                     </div>
 
+                    <div class="logo-graph-axis"></div>
+
                 </div>
 
 
