--- a/index.html
+++ b/index.html
@@ -48,6 +48,10 @@
 
                 </div>
 
+                <div class="title-container">
+                    MyStats
+                </div>
+
 
             </div>
 
